--- a/force-app/main/default/classes/ABSLI_ComplaintsResolveStageBefore.cls
+++ b/force-app/main/default/classes/ABSLI_ComplaintsResolveStageBefore.cls
@@ -33,6 +33,10 @@ public class ABSLI_ComplaintsResolveStageBefore implements ASF_CaseStageClassInv
                     retCls.status = ABSLI_Constants.ERROR;
                     retCls.errorMessage = wrapperResult.message; 
                 }
+            	if(wrapperResult.result && wrapperResult.blankFields.isEmpty()){
+                    retCls.status = ABSLI_Constants.ERROR;
+                    retCls.errorMessage = wrapperResult.message; 
+                }
                 returnWrapper.put(caseId, retCls);
             }
         return returnWrapper;
