--- a/force-app/main/default/classes/ASF_CaseApprovalTriggerHelper.cls
+++ b/force-app/main/default/classes/ASF_CaseApprovalTriggerHelper.cls
@@ -26,7 +26,21 @@ public without sharing class ASF_CaseApprovalTriggerHelper {
             // }
         }
         if(submitForApprovalList.size() > 0){
-            List<Approval.ProcessResult> resultList = Approval.process(requestLIst);   
+            List<Approval.ProcessResult> resultList = new List<Approval.ProcessResult>();
+            try{
+                resultList = Approval.process(requestLIst);   
+            }
+            catch(DmlException dEx){
+                for(integer i=0;i<dEx.getNumDml();i++){
+                    System.debug(dEx.getDmlType (i));
+                    if(dEx.getDmlType(i).toString() == 'STRING_TOO_LONG'){
+                        for(ASF_Case_Approv__c trg : submitForApprovalList){
+                            trg.addError('String too large to save.');
+                        }
+                    }
+                    
+                }
+            }
             //Virendra : 6th March 2023 : Added code below to update the Is_Approval_Pending__c to True on Case record.
             List<Case> cList = new List<Case>();
             
