Sprint 2 Email Update Fixes

--- a/force-app/main/default/classes/ABSLI_EmailUpdateIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_EmailUpdateIntegration.cls
@@ -37,7 +37,15 @@ result.status = ABSLI_Constants.SUCCESS;
             caseRecords.add(ASF_IntegrationsController.queriedCasesForIntegration.get(caseRec.Id));
         }
 
-        System.debug('@@caseRecords --> '+caseRecords);
+		Set<Id> skipcaseIds = new Set<Id>();
+		for (ASF_Checklist__c filteredChecklist : [
+			SELECT Id, Case__c
+			FROM ASF_Checklist__c
+			WHERE Status__c NOT IN ('Yes', 'Signature Matched')
+            AND Case__c IN: caseRecords
+		]) {
+			skipcaseIds.add(filteredChecklist.Case__c);
+		}
 
         for(Case caseRecord : caseRecords){
             ASF_IntegrationsController.IntegrationWrapper result = new ASF_IntegrationsController.IntegrationWrapper();
