PAN Update Changes Advanced UI

--- a/force-app/main/default/classes/ABSLI_NSDLPANVerification.cls
+++ b/force-app/main/default/classes/ABSLI_NSDLPANVerification.cls
@@ -11,20 +11,73 @@ public with sharing class ABSLI_NSDLPANVerification {
             
             if(caseRecord.Account.IsPersonAccount){
                 panWrapper.name = caseRecord.Account.Name;
-                panWrapper.pan = caseRecord.Account.PAN__c;
+                String panFromCaseExt = caseRecord.ABSLI_Case_Detail__r.PAN_Number__c;
+                panWrapper.pan = panFromCaseExt != null  && panFromCaseExt != '' ? panFromCaseExt : caseRecord.Account?.PAN__c;
                 panWrapper.dob = caseRecord.Account.PersonBirthdate;
                 panWrapper.panValidationStatus = caseRecord.ABSLI_Case_Detail__r.Status_Valid_For_STP__c;
+                panWrapper.caseExtId = caseRecord.ABSLI_Case_Detail__c;
             }else{
-                List<Contact> contactRecord = [Select id,Name,Birthdate from Contact where Primary__c = true and AccountId = :caseRecord.AccountId limit 1];
+                List<Contact> contactRecord = [Select id,Name,Birthdate,Account.PAN__c from Contact where Primary__c = true and AccountId = :caseRecord.AccountId limit 1];
                 if(contactRecord.size() > 0){
                     panWrapper.name = contactRecord[0].Name;
                     //panWrapper.pan = caseRecord.Account.PAN__c;
                     panWrapper.dob = contactRecord[0].Birthdate; 
                     panWrapper.panValidationStatus = caseRecord.ABSLI_Case_Detail__r.Status_Valid_For_STP__c;   
+                    panWrapper.caseExtId = caseRecord.ABSLI_Case_Detail__c;
                 }
             }
 
             return panWrapper;
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+    
+    @AuraEnabled
+    public static void updateSTPFlagOnCaseDetail(String caseExtId, boolean flagVal){
+        ABSLI_Case_Detail__c caseExtRec = new ABSLI_Case_Detail__c(Id = caseExtId);
+        caseExtRec.Status_Valid_For_STP__c = flagVal;
+        update caseExtRec;
+    }
+    
+    @AuraEnabled
+    public static PANVerificationResponseWrapper verifyPANDetails(String panInputWrapperStr, String caseId){
+        try {
+            PANVerificationResponseWrapper panResponseWrapper = new PANVerificationResponseWrapper();
+            panResponseWrapper.isSuccess = false;
+            PANRequestWrapper panRequest = new PANRequestWrapper();
+            PANInputWrapper panInputWrapper = (PANInputWrapper)JSON.deserialize(panInputWrapperStr,PANInputWrapper.class);
+            panRequest.SOURCE = System.label.ABSLI_ESB_SOURCE_VAL;
+            Date dob = Date.valueof(panInputWrapper.dob);
+            DateTime dobDateTime = DateTime.newInstance(dob.year(), dob.month(),dob.day());
+            panInputWrapper.dob =  dobDateTime.Format('dd/MM/yyyy');
+            panInputWrapper.fathername = '';
+            panRequest.inputData = new List<PANInputWrapper>{panInputWrapper};
+            ABCL_IntegrationCallout.IntegrationResponseWrapper nsdlResponse = ABCL_IntegrationCallout.executeCallout(ABSLI_Constants.PAN_VERIFICATION_INTEGRATION_METADATA,
+                                                                                                                    JSON.serialize(panRequest),
+                                                                                                                    null);
+            if(String.isNotBlank(nsdlResponse.responseBody)){
+                PANResponseWrapper responseWrapper = (PANResponseWrapper)JSON.deserialize(nsdlResponse.responseBody,PANResponseWrapper.class);
+                if(nsdlResponse.statusCode == 200){
+                    panResponseWrapper.isSuccess = true;
+                    panResponseWrapper.responseStr = nsdlResponse.responseBody;
+                }else {
+                    if(responseWrapper.Fault != null && responseWrapper.Fault.FaultMessage != null){
+                        panResponseWrapper.errorMessage = responseWrapper.Fault.FaultMessage.resposne_Message;
+                    }
+                    else{
+                       panResponseWrapper.errorMessage = 'Opps! Something went wrong at API Layer'; 
+                    }
+                }
+            }
+            string status = '';
+            if(panResponseWrapper.isSuccess){
+                status = ABHFL_Constants.SUCCESS;
+            }else{
+                status = ABHFL_Constants.FAILURE;
+            }
+
+            return panResponseWrapper;
         } catch (Exception e) {
             throw new AuraHandledException(e.getMessage());
         }
@@ -146,6 +199,8 @@ public with sharing class ABSLI_NSDLPANVerification {
         public Date dob;
         @AuraEnabled
         public Boolean panValidationStatus;
+        @AuraEnabled
+        public string caseExtId;
     }
 
     public class PANRequestWrapper{
