--- a/force-app/main/default/classes/ABFL_E2C_CreationRules.cls
+++ b/force-app/main/default/classes/ABFL_E2C_CreationRules.cls
@@ -133,23 +133,19 @@ public with sharing class ABFL_E2C_CreationRules {
         
         // Index to keep track of position in expectedWords
         Integer expectedIndex = 0;
-        
-        // Check if actualValue contains expectedValue
-        if (actualValue.contains(expectedValue)) {
-            // Iterate through words in actualValue
-            for (String word : actualWords) {
-                // Check if the current word matches the next word in expectedValue
-                if (expectedIndex < expectedWords.size() && expectedWords[expectedIndex] == word) {
-                    expectedIndex++;
-                } 
-                // If all words from expectedValue are found in actualValue, return true
-                else if (expectedIndex < expectedWords.size() && !word.contains(expectedWords[expectedIndex])) {
-                    return false;
-                }
+
+        // Iterate through words in actualValue
+       	for (String word : actualWords) {
+          	// Check if the current word matches the next word in expectedValue
+            if (expectedIndex < expectedWords.size() && expectedWords.get(expectedIndex).equals(word)) {
+               	expectedIndex++;
+            }else{
+                expectedIndex = 0;
+            } 
+            // If all words from expectedValue are found in actualValue, return true
+            if (expectedIndex == expectedWords.size()) {
+                return true;
             }
-            
-            // If not all words from expectedValue were found in actualValue in the same order, return false
-            return expectedIndex == expectedWords.size();
         }
         
         // If actualValue does not contain expectedValue, return false
