PAS, Policy Nominee & Bitly Change

--- a/force-app/main/default/classes/ABSLI_PolicyStatementIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_PolicyStatementIntegration.cls
@@ -79,7 +79,7 @@ public with sharing class ABSLI_PolicyStatementIntegration implements ASF_Integr
 					caseRecord.Asset?.Policy_No__c,
                     ABCL_IntegrationCommonUtility.dateFormat(caseRecord.ABSLI_Case_Detail__r?.From_Date__c, 'dd-MM-YYYY'),
                     ABCL_IntegrationCommonUtility.dateFormat(caseRecord.ABSLI_Case_Detail__r?.To_Date__c, 'dd-MM-YYYY'),
-                    ABCL_IntegrationCommonUtility.dateFormat(caseRecord.Account?.PersonBirthdate, 'dd-MM-YYYY')
+                    ABCL_IntegrationCommonUtility.dateFormat(caseRecord.Asset?.LI_DOB__c, 'dd-MM-YYYY')
 				)
 			);
 			for (ASF_Integration__c intSpec : integs.get(caseRecord.Id)) {
