--- a/force-app/main/default/classes/ABFL_WealthChatGeneratedCases.cls
+++ b/force-app/main/default/classes/ABFL_WealthChatGeneratedCases.cls
@@ -61,23 +61,29 @@ public with sharing class ABFL_WealthChatGeneratedCases {
         if(caseIdsToSendAcknowledgement.size()>0){
             for(case caseobj: ASF_EmailMessageQueryHandler.getCaseRecords(caseIdsToSendAcknowledgement)){
                 if(caseobj.Origin == ABFL_Constants.ABWMEMAIL){
-                	ASF_SendCustomerCommunication.sendCustomerCommunicationToSpecificEmailAndMobile(caseobj, ABFL_Constants.WMEMAILTEMPLATENAME, caseobj.SuppliedEmail, '', '');
+                    ASF_SendCustomerCommunication.sendCustomerCommunicationToSpecificEmailAndMobile(caseobj, ABFL_Constants.WMEMAILTEMPLATENAME, caseobj.SuppliedEmail, '', '');
                 }
             }
         }
             
-            
-        //Check if the casesToUpdate list is empty or not
-        if(!casesToUpdate.isEmpty() && casesToUpdate.size()>0){
-            ASF_TriggerSkipperUtility.markTriggerRun('Case'); // to disable the trigger
-            if(Schema.sObjectType.Case.isUpdateable()){ 
-                update casesToUpdate;
+        try{
+            //Check if the casesToUpdate list is empty or not
+            if(!casesToUpdate.isEmpty() && casesToUpdate.size()>0){
+                ASF_TriggerSkipperUtility.markTriggerRun('Case'); // to disable the trigger
+                if(Schema.sObjectType.Case.isUpdateable()){ 
+                    update casesToUpdate;
+                }
+                for(Case c: casesToUpdate){
+                    // Platform Event trigger to send Email and SMS to the Supplied Email & Phone
+                    ASF_SendCustomerCommunication.sendCustomerCommunicationToSpecificEmailAndMobile(c, ABFL_Constants.WMEMAILTEMPLATENAME, c.SuppliedEmail, ABFL_Constants.WMSMSTEMPLATENAME, c.SuppliedPhone);
+                } 
             }
-            for(Case c: casesToUpdate){
-                // Platform Event trigger to send Email and SMS to the Supplied Email & Phone
-                ASF_SendCustomerCommunication.sendCustomerCommunicationToSpecificEmailAndMobile(c, ABFL_Constants.WMEMAILTEMPLATENAME, c.SuppliedEmail, ABFL_Constants.WMSMSTEMPLATENAME, c.SuppliedPhone);
-            } 
-        }    
+        }catch(Exception e) {
+            ABCL_Logger.enableExceptionLogging();
+            ABCL_Logger.push('ABFL_WealthChatGeneratedCases: Case Generation failed');
+            ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.emit();
+        }
     }
     
     /**
